<resources>
    <string name="app_name">RemindMe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="helloText">Hello</string>
    <string name="no_account_exists">Don\'t have an account?</string>
    <string name="welcome_back_text">Welcome Back to RemindMe</string>
    <string name="login_text">Login to your account</string>
    <string name="welcome">Welcome to RemindMe</string>
    <string name="create_account">Create an account</string>
    <string name="already_account">Already have an account?</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_an_item">Add an Item</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <string name="reminder_detail">Reminder Detail</string>
    <string name="home_menu_label">Home</string>
    <string name="profile_menu_label">Profile</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

</resources>